# SimpleTimeTracker

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  docs.config  setup-dependencies.bat  setup-dependencies.sh  vcpkg-configuration.json  vcpkg.json
include/: category.hpp  manager.hpp  project.hpp  ui_manager.hpp
src/: main.cpp  manager.cpp  projects.cpp  ui_manager.cpp
